[gd_scene load_steps=4 format=3 uid="uid://c1c7w62icklj7"]

[ext_resource type="Script" path="res://Scripts/base_enemy_ai.gd" id="1_tcg4s"]
[ext_resource type="Texture2D" uid="uid://cfxol6j2iyqcw" path="res://Sprites/icon.svg" id="2_ayr7t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ppwh2"]
radius = 25.0

[node name="Base Enemy" type="CharacterBody2D"]
position = Vector2(73, 1)
script = ExtResource("1_tcg4s")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.521569, 0, 1)
scale = Vector2(0.359375, 0.359375)
texture = ExtResource("2_ayr7t")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ppwh2")

[node name="Attack_CD" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
